# rl-final-project

./: .gitignore  MILESTONE_REPORT.md  README.md  pyproject.toml
configs/: antmaze_large.yaml  antmaze_medium.yaml
notebooks/: antmaze_colab.ipynb
scripts/: train_antmaze.py
src/aca_distill/: __init__.py  cli.py  config.py
src/aca_distill/algos/: aca_teacher.py  behavior_cloning.py  diffusion.py  distillation.py
src/aca_distill/data/: antmaze.py
src/aca_distill/envs/: wrappers.py
src/aca_distill/eval/: metrics.py  rollout.py
src/aca_distill/models/: common.py  critic.py  student.py
src/aca_distill/trainers/: offline_trainer.py
src/aca_distill/utils/: checkpoint.py  logging.py  seeding.py
tests/: test_diffusion.py  test_models.py  test_reward_shaping.py
